--- a/form/src/app/ng-model/ng-model.component.html
+++ b/form/src/app/ng-model/ng-model.component.html
@@ -1,5 +1,5 @@
 <form (ngSubmit)="submit(f)" #f="ngForm">
-  <div class="form-group">
+  <div class="form-group w-25">
     <input
       type="text"
       ngModel
@@ -10,7 +10,7 @@
       [(ngModel)]="nome"
     />
   </div>
-  <div class="form-group">
+  <div class="form-group w-25">
     <input
       type="text"
       ngModel
@@ -21,7 +21,7 @@
     />
   </div>
 
-  <div class="form-group col-6">
+  <div class="form-group w-25">
     <input
       type="email"
       ngModel
@@ -31,7 +31,7 @@
       [(ngModel)]="email"
     />
   </div>
-  <div class="form-group col-6">
+  <div class="form-group w-25">
     <input
       type="password"
       ngModel
@@ -42,7 +42,7 @@
     />
   </div>
 
-  <div class="form-row row">
+  <div class="form-row row w-25">
     <div class="form-group col-6">
       <select name="genere" ngModel class="form-control">
         <option value="">--genere--</option>
@@ -58,7 +58,7 @@
     <input
       type="file"
       ngModel
-      class="form-control"
+      class="form-control w-25"
       placeholder="Immagine profilo"
       name="Img profilo"
       [(ngModel)]="immagineProfilo"
@@ -66,13 +66,13 @@
   </div>
   <div>
     <p><label>Biografia:</label></p>
-    <textarea rows="4" cols="70" ngModel class="form-control"> </textarea>
+    <textarea rows="4" cols="70" ngModel class="form-control w-25"> </textarea>
   </div>
   <div class="form-group">
     <input
       type="text"
       ngModel
-      class="form-control"
+      class="form-control w-25"
       placeholder="Il tuo username"
       name="username"
       [(ngModel)]="username"
