--- a/form/src/app/ng-model/ng-model.component.html
+++ b/form/src/app/ng-model/ng-model.component.html
@@ -60,13 +60,14 @@
       ngModel
       class="form-control w-25"
       placeholder="Immagine profilo"
-      name="Img profilo"
+      name="immagineProfilo"
       [(ngModel)]="immagineProfilo"
     />
   </div>
   <div>
     <p><label>Biografia:</label></p>
-    <textarea rows="4" cols="70" ngModel class="form-control w-25"> </textarea>
+    <textarea rows="4" cols="70" ngModel class="form-control w-25" name="bio">
+    </textarea>
   </div>
   <div class="form-group">
     <input
